[gd_scene load_steps=3 format=1]

[ext_resource path="res://simpleBullet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 9.15601

[node name="simpleBullet" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
mode = 0
mass = 0.1
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]

polygon = Vector2Array( -3.93892, -8.39743, -8.4399, -3.47775, -8.23055, 4.05877, -4.67164, 8.03638, 4.33032, 8.03638, 8.72663, 3.84943, 8.62196, -3.2684, 4.22565, -8.5021 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="tail" type="Particles2D" parent="."]

config/amount = 16
config/lifetime = 7.0
config/time_scale = 4.0
config/process_mode = 1
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_enter" from="." to="." method="_on_simpleBullet_body_enter"]

[connection signal="body_enter_shape" from="." to="." method="_on_simpleBullet_body_enter_shape"]

[connection signal="input_event" from="." to="." method="_on_simpleBullet_input_event"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]


